--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body ng-app="uiApp">
   <h1>Rocker Space Race</h1>
-  <button id="start">Start</button>
+  <div>Registration closes in <span id="time">05:00</span> minutes!
+  <button id="start" ng-click="setShow()">Start</button>
   <div ui-view class="table"></div>
   <!-- bower:js -->
   <script src="bower_components/angular/angular.js"></script>
@@ -23,10 +24,31 @@
   <script src="/dist/scripts/app.js"></script>
   <!-- endinject -->
 
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.min.js"></script>-->
   <script type="text/javascript" src="./d3.min.js"></script>
-  <!--<script type="text/javascript" src="./generator.js"></script>-->
+  <script type="text/javascript">
+    function startTimer(duration, display) {
+      var timer = duration, minutes, seconds;
+      setInterval(function () {
+          minutes = parseInt(timer / 60, 10)
+          seconds = parseInt(timer % 60, 10);
 
-  <!--<script type="text/javascript" src="./movie.js"></script>-->
+          minutes = minutes < 10 ? "0" + minutes : minutes;
+          seconds = seconds < 10 ? "0" + seconds : seconds;
+
+          display.textContent = minutes + ":" + seconds;
+
+          if (--timer < 0) {
+              timer = duration;
+          }
+      }, 1000);
+}
+
+    window.onload = function () {
+        var fiveMinutes = 60 * 5,
+            fiveSeconds = 5,
+            display = document.querySelector('#time');
+        startTimer(fiveSeconds, display);
+    };
+  </script>
 </body>
 </html>
